# model-rotator

./: README.md  pyproject.toml
model_rotator/: __init__.py  model_rotator.py
