[tool.poetry]
name = "model-rotator"
version = "0.1.2"
description = "rotates models to avoid hitting rate limit"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
